--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,8 @@ dependencies {
     
     //Glide - Biblioteca para carregamento das imagens
     implementation 'com.github.bumptech.glide:glide:4.12.0'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.0'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.5.0'
     kapt 'com.github.bumptech.glide:compiler:4.12.0'
 
     //Picasso
